--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -496,7 +496,7 @@ span.unhappyMessage {
 }
 
 .filters {
-  float:left ;
+  max-width: 70% ;
   margin-right: 30px ;
 
   > label {
@@ -504,7 +504,11 @@ span.unhappyMessage {
     font: {
       size: 12px ;
     }
-    float:right ;
+    float:left ;
     margin-left: 5px ;
+  }
+  
+  > input[type="checkbox"] {
+    float:left ;
   }
 }
