--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,4 +8,8 @@
     = csrf_meta_tag
   
   %body 
+    #public-links
+      %ul.no-bullets
+        = main_link :for => :videos, :as => 'how-to videos'
+        = main_link :for => :register, :as => 'get invited to try'
     = yield 
