--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -14,6 +14,8 @@
     = render :partial => 'sektions/new'
     = render :partial => 'examiners/new'
     = render :partial => 'teachers/edit'
+    = render :partial => 'videos/new'
+    = render :partial => 'admin/console'
 
     = render :partial => 'boards/controls'
     = render :partial => 'courses/controls'
