First working draft of how-to videos page ..
Now, embeds video specified in the database

--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -616,6 +616,17 @@ span.unhappyMessage {
 #video-titles {
   width: 30% ;
   color: white ;
+  margin-top: 40px ;
+
+  > a {
+    text: {
+      decoration: none ;
+      transform: lowercase ;
+    }
+    color: #6ca7ab ; 
+    font-size: 14px ;
+    margin-bottom: 5px ;
+  }
 }
 
 #embedded-video {
