Minor edits to link names

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,7 +11,6 @@
     #viewport
       #public-links
         %ul.no-bullets
-          = main_link :for => :videos, :as => 'how-to videos', :href => howtos_path
-          = main_link :for => :register, :as => 'get invited to try'
-          = main_link :for => :main, :as => 'back to login', :href => root_path
+          = main_link :for => :main, :as => 'home', :href => root_path
+          = main_link :for => :videos, :as => 'how-tos', :href => howtos_path
       = yield 
