Navigation hint added to #question-options ..
Needed to remind users that 'B' is for going back and 'N' is
for going forward - especially now that navigation buttons
  from popeye are hidden/done away with. There is, therefore, only
  one way - via the keyboard - to go back and forth

--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -633,3 +633,12 @@ span.unhappyMessage {
   width: 65% ;
   margin-top: 50px ;
 }
+
+#preview-navigation {
+  min-height: 50px ;
+  width: 90% ;
+
+  > .ticker {
+    margin-top: 5px ;
+  }
+}
