--- a/app/views/teachers/_buildquiz.html.haml
+++ b/app/views/teachers/_buildquiz.html.haml
@@ -26,6 +26,7 @@
         = submit_tag 'next', :class => :right
       .form-fields
   #question-options
+    = render :partial => 'toolbox/preview_nav'
     = form_tag 'teacher/build_quiz', :remote => true, :method => :put do |f| 
       .submit-buttons
         = text_field_tag :quiz_name, nil, :placeholder => "give the quiz a name", :size => 20
