Added preview navigation controls to scoring scheme too

--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -637,6 +637,7 @@ span.unhappyMessage {
 #preview-navigation {
   min-height: 50px ;
   width: 90% ;
+  margin-bottom: 14px ;
 
   > .ticker {
     margin-top: 5px ;
