Assigning a quiz now shows the same graphic for queue status as build-quiz does

--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -458,7 +458,7 @@ span.unhappyMessage {
     background-color: lighten($blue, 20%) ;
   }
 
-#queue-graphic {
+#build-quiz-receipt, #assign-quiz-receipt {
   width: 90% ;
   min-height: 100px ;
 
