Changed tab 'section' to 'groups'

--- a/app/views/teachers/_assignquiz.html.haml
+++ b/app/views/teachers/_assignquiz.html.haml
@@ -4,7 +4,7 @@
     %li
       %a{ :href => '#past-quizzes' }= "quizzes"
     %li
-      %a{ :href => '#sektion-list' }= "sections"
+      %a{ :href => '#sektion-list' }= "groups"
     %li
       %a{ :href => '#student-list' }= "students"
     %li
