Added log tables to list of calculation aids ...
Also, changed the internal codes used to represent these aids.
They are now simply 0,1,2,3 and so on ( instead of powers of 2 )

--- a/app/views/examiners/_workbench.html.haml
+++ b/app/views/examiners/_workbench.html.haml
@@ -23,7 +23,7 @@
                   :wrapper_html => {:class => 'full-width'},
                   :label => 'topic treatment'
         = f.input :calculation_aid, :as => :select, :include_blank => false, 
-                  :collection => {'none' => 0, 'scientific calc.' => 2, 'graphing calc.' => 4},
+                  :collection => {'none' => 0, 'scientific calc.' => 1, 'graphing calc.' => 2, 'log tables' => 3},
                   :wrapper_html => {:class => 'full-width'},
                   :label => 'calculators ?'
         = f.input :num_parts, :as => :select, :include_blank => true, :label => '# sub-parts',
