Renamed #queue-graphic to #build-quiz-receipt
Should have been committed alongwith similar change in assignquiz.

--- a/app/views/teachers/_buildquiz.html.haml
+++ b/app/views/teachers/_buildquiz.html.haml
@@ -33,7 +33,7 @@
         = submit_tag 'build quiz'
       .form-fields
 
-  #queue-graphic
+  #build-quiz-receipt
     .what-now
       #job-position.big-ticker.left
         .ticker-margin-note= "Your request is"
