Incomplete last commit

--- a/app/views/teachers/_buildquiz.html.haml
+++ b/app/views/teachers/_buildquiz.html.haml
@@ -10,7 +10,7 @@
     %li
       %a{ :href => '#question-options' }= "pick"
     %li
-      %a{ :href => '#queue-graphic'}= "summary"
+      %a{ :href => '#build-quiz-receipt'}= "summary"
   #courses-taught
   #vertical-selection-list
     = form_tag 'course/applicable_topics', :remote => true, :method => :put do |f| 
