--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -117,6 +117,7 @@ body {
   color: white ;
   font-size: 12px ;
   font-weight: normal ;
+  cursor: pointer ;
 } 
 
 .as-accordion .swiss-knife { /* when within an accordion */
@@ -198,7 +199,7 @@ body {
   padding-left: 20px ;
 }
 
-#vertical-selection > legend { 
+#topic-selection > legend { 
   width: 100% ;
   
   margin: {
@@ -647,5 +648,32 @@ span.unhappyMessage {
 li {
   > label {
     color: #6ca7ab ;
+  }
+}
+
+#topic-selection-list, #question-options {
+  .scroll-heading {
+    border-bottom: 1px solid white;
+    font-size: 13px ;
+    padding: {
+      top: 5px ;
+      bottom: 5px ;
+    }
+    color: #6ca7ab ;
+    cursor: pointer ;
+  }
+
+  > form {
+    min-height: 300px ;
+  }
+}
+
+form .scroll-content.ui-accordion-content {
+  width: 90% ;
+  padding: 0pt ;
+  min-height: 100px ;
+
+  > .swiss-knife {
+    margin-top: 4px ;
   }
 }
