Intermediate commit: Some more changes related to new interface for build quiz

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -14,8 +14,9 @@
     = render :partial => 'teachers/queue_status'
     = render :partial => 'teachers/reportcards'
 
-    = render :partial => 'toolbox/document_preview'
+    = render :partial => 'toolbox/pdf_viewer'
     = render :partial => 'toolbox/edit_account'
+    = render :partial => 'toolbox/document_preview'
     = render :partial => 'toolbox/inline_error'
     = render :partial => 'toolbox/katana'
     = render :partial => 'toolbox/nail_file'
