New document-viewer plugin integrated

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -5,6 +5,7 @@
 *= require tweaks 
 *= require jquery-custom-theme/styling 
 *= require_directory ../../../vendor/assets/stylesheets/popeye 
+*= require ../../../vendor/assets/stylesheets/media-viewer/style 
 *= require formtastic 
 *= require formtastic_changes 
 */ 
