Styling changes for .micro-ticker

--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -262,10 +262,10 @@ span.unhappyMessage {
 .micro-ticker {
   color: #fd9105 ; 
   font: {
-    size: 10pt ;
+    size: 9pt ;
     weight: normal ; 
-    variant: small-caps;
   }
+  margin-right: 3% ;
 }
 
 .led {
