--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -654,13 +654,13 @@ li {
 
 #topic-selection-list, #question-options {
   .scroll-heading {
-    border-bottom: 1px solid white;
+    border-bottom: 1px solid #6ca7ab ; 
     font-size: 13px ;
     padding: {
       top: 5px ;
-      bottom: 5px ;
+      bottom: 5px ; 
     }
-    color: #6ca7ab ;
+    color: white ;
     cursor: pointer ;
   }
 
@@ -675,7 +675,9 @@ form .scroll-content.ui-accordion-content {
   min-height: 100px ;
 
   > .swiss-knife {
+    color: #6ca7ab ;
     margin-top: 4px ;
+    border-bottom: 1px solid white ;
   }
 }
 
