Minor styling change

--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -677,7 +677,7 @@ form .scroll-content.ui-accordion-content {
   > .swiss-knife {
     color: #6ca7ab ;
     margin-top: 4px ;
-    border-bottom: 1px solid white ;
+    border: none ;
   }
 
   > .swiss-knife.selected {
