--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -111,9 +111,9 @@ body {
 }
 
 .swiss-knife { 
-  min-height: 25px ;
-  border-bottom: 1px solid lighten($gray, 30%) ; 
-  padding-top: 3px ;
+  min-height: 22px ;
+  border-bottom: 1px solid #6ca7ab ; 
+  padding-top: 0px ;
   color: white ;
   font-size: 12px ;
   font-weight: normal ;
