Minor changes to video-link styling

--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -624,10 +624,12 @@ span.unhappyMessage {
       decoration: none ;
       transform: lowercase ;
     }
-    color: #6ca7ab ; 
+    color: white ; 
     font-size: 14px ;
-    margin-bottom: 5px ;
+    margin-bottom: 10px ;
     width: 95% ;
+    float: right ;
+    padding: 4px 3px 4px 3px ;
   }
 }
 
