Minor changes to video-link styling

--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -630,6 +630,7 @@ span.unhappyMessage {
     width: 95% ;
     float: right ;
     padding: 4px 3px 4px 3px ;
+    border-bottom: 1px solid #6ca7ab ;
   }
 }
 
