--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,8 +19,10 @@
     = csrf_meta_tag
   %body 
     #viewport
+      #company-logo
+        = image_tag("gradians-small.png", alt: "gradians", id: "gradians_logo")
       #public-links
-        %ul.no-bullets
+        %ul.no-bullets      
           = main_link :for => :main, :as => 'home', :href => '#'
           = main_link :for => :videos, :as => 'video tutorials', :href => howtos_path
           = main_link :for => :how_it_works, :as => 'how it works', :href => '#'
