--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,7 +20,7 @@
   %body 
     #viewport
       #company-logo
-        = image_tag("gradians-small.png", alt: "gradians", id: "gradians_logo")
+        = image_tag("gradians-small-blue.png", alt: "gradians", id: "gradians_logo")
       #public-links
         %ul.no-bullets      
           = main_link :for => :main, :as => 'home', :href => '#'
