Signin form's submit button is now the same orange as we use everywhere else

--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -634,8 +634,8 @@ span.unhappyMessage {
         weight: bold ;
         size: 17px ;
       }
-      color: white ; 
-      background-color: $pink ;
+      color: black ; 
+      background-color: #fd9105 ; 
       padding: 8px 6px 8px 6px ;
       text: {
         align: center ;
