--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,12 +1,13 @@
 - content_for :sign_in_form do 
-  #sign_in_form
-    = render :partial => 'welcome/sign_in_form'
+  = render :partial => 'welcome/sign_in_form'
+- content_for :how_it_works do 
+  = render :partial => 'welcome/how_it_works'
+- content_for :download do 
+  = render :partial => 'welcome/download'
 - content_for :about_us do 
-  #about_us.hidden
-    = render :partial => 'welcome/about_us'
+  = render :partial => 'welcome/about_us'
 - content_for :footer do 
-  #footer
-    = render :partial => 'welcome/footer'
+  = render :partial => 'welcome/footer'
 
 
 !!!5
@@ -24,10 +25,13 @@
       #public-links
         %ul.no-bullets      
           = main_link :for => :main, :as => 'home', :href => '#'
-          = main_link :for => :videos, :as => 'video tutorials', :href => howtos_path
+          = main_link :for => :videos, :as => 'video tutorials', :href => '#'
           = main_link :for => :how_it_works, :as => 'how it works', :href => '#'
-          = main_link :for => :scan_loader, :as => 'download', :href => '#'
+          = main_link :for => :download, :as => 'download', :href => '#'
           = main_link :for => :about_us, :as => 'about us', :href => '#'
-      = yield :sign_in_form
-      = yield :about_us
+      #mainstage
+        = yield :sign_in_form
+        = yield :how_it_works
+        = yield :download
+        = yield :about_us
     = yield :footer
