--- a/app/views/welcome/_footer.html.haml
+++ b/app/views/welcome/_footer.html.haml
@@ -1,4 +1,5 @@
-#copyright-notice
-  #copyright-validity= "Copyright 2012-2013 Gradians. This site is best viewed using"      
-  = link_to image_tag("firefox.png", alt: "Firefox"), 'http://www.mozilla.com/en-US/firefox/'  
-  = link_to image_tag("chrome.png", alt: "Chrome"), 'http://google.com/chrome'
+#footer
+  #copyright-notice
+    #copyright-validity= "Copyright 2012-2013 Gradians. This site is best viewed using"      
+    = link_to image_tag("firefox.png", alt: "Firefox"), 'http://www.mozilla.com/en-US/firefox/'  
+    = link_to image_tag("chrome.png", alt: "Chrome"), 'http://google.com/chrome'
