--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,11 +1,3 @@
-- content_for :sign_in_form do 
-  = render :partial => 'welcome/sign_in_form'
-- content_for :how_it_works do 
-  = render :partial => 'welcome/how_it_works'
-- content_for :download do 
-  = render :partial => 'welcome/download'
-- content_for :about_us do 
-  = render :partial => 'welcome/about_us'
 - content_for :footer do 
   = render :partial => 'welcome/footer'
 
@@ -24,14 +16,11 @@
         = image_tag("gradians-small-blue.png", alt: "gradians", id: "gradians_logo")
       #public-links
         %ul.no-bullets      
-          = main_link :for => :main, :as => 'home', :href => '#'
-          = main_link :for => :videos, :as => 'video tutorials', :href => '#'
-          = main_link :for => :how_it_works, :as => 'how it works', :href => '#'
-          = main_link :for => :download, :as => 'download', :href => '#'
-          = main_link :for => :about_us, :as => 'about us', :href => '#'
+          = main_link :for => :main, :as => 'home', :href => root_path
+          = main_link :for => :videos, :as => 'video tutorials', :href => howtos_path
+          = main_link :for => :how_it_works, :as => 'how it works', :href => how_it_works_path
+          = main_link :for => :download, :as => 'download', :href => download_path
+          = main_link :for => :about_us, :as => 'about us', :href => about_us_path
       #mainstage
-        = yield :sign_in_form
-        = yield :how_it_works
-        = yield :download
-        = yield :about_us
+        = yield
     = yield :footer
