--- a/app/views/videos/howtos.html.haml
+++ b/app/views/videos/howtos.html.haml
@@ -1,5 +1,8 @@
 
 #video-titles.left
+  %legend
+    %span.target= "How do I ... ?"
+    %span.operation= "select one"
   - @videos.each_with_index do |m,j|
     = link_to "#{m.title}", video_load_path(:id => m.id), :remote => true, 
       :class => "howto-video", :marker => "#{m.id}"
