--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,7 +8,7 @@
   %head 
     %title= "Grades will happen ..."
     = stylesheet_link_tag "application" 
-    = javascript_include_tag "application", "welcome"
+    = javascript_include_tag "application"
     = csrf_meta_tag
   %body 
     #viewport
