'download-btn' is now an <a> - rendered as a button by JS ...
Its href is set in core/behaviour

--- a/app/views/welcome/download.html.haml
+++ b/app/views/welcome/download.html.haml
@@ -3,8 +3,7 @@
   = image_tag("security-warning-small.png", alt: "warning", id: "warning_popup")
 
 .right
-  #download-btn
-    = link_to 'Download Scan Loader', '#'
+  = link_to 'Download Scan Loader', '#', :id => 'download-btn'
   #download-what-it-means
     The first time you download this utility you'll be prompted with a |
     security warning of the kind you see on the the left. Select the |
