--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -679,6 +679,7 @@ span.unhappyMessage {
     > .step {
       width: 90% ;
       min-height: 70px ;
+      margin-bottom: 7% ;
 
       > img { 
         float: left ; 
