--- a/app/views/welcome/how_it_works.html.haml
+++ b/app/views/welcome/how_it_works.html.haml
@@ -1,22 +1,21 @@
 #how-it-works
   .half-column.left
     .step
-      = image_tag "1-small.png"
-      .right= "Teacher picks questions from our database to build a quiz"
+      = image_tag "1.png"
+      .right= "Teacher picks questions from our database to create a quiz"
     .step
-      = image_tag "2-small.png"
-      .right= "Download and printout the quiz"
+      = image_tag "2.png"
+      .right= "Downloads the one PDF with testpapers for all students"
     .step
-      = image_tag "3-small.png"
-      .right= "Students take the quiz"
+      = image_tag "3.png"
+      .right= "Students complete the quiz and return testpapers to teacher"
   .half-column.right
     .step
-      = image_tag "4-small.png"
-      .right= "Teacher scans the returned answer sheets"
+      = image_tag "4.png"
+      .right= "Teacher scans completed testpapers"
     .step
-      = image_tag "5-small.png"
-      .right= "She then uploads the scans using the scan-loader application"
+      = image_tag "5.png"
+      .right= "Scans are transmitted back to us using our scanning app" 
     .step
-      = image_tag "6-small.png"
-      .right= "We grade the responses. Teachers and students can then view their results"
-
+      = image_tag "6.png"
+      .right= "We judge the quality of responses. Marks are then calculated based on teacher's marking scheme"
