Scanbot featured on download page ...
The scanbot is what we will call our scanning application ...
the bot is friendly :-)

--- a/app/views/welcome/download.html.haml
+++ b/app/views/welcome/download.html.haml
@@ -1,6 +1,6 @@
 
 #download-screenshots.left
-  = image_tag("security-warning-small.png", alt: "warning", id: "warning_popup")
+  = image_tag "scanbot-trans.png"
 
 .right
   = link_to 'Download Scan Loader', '#', :id => 'download-btn'
