--- a/app/assets/stylesheets/tweaks.css
+++ b/app/assets/stylesheets/tweaks.css
@@ -88,7 +88,7 @@ td {
 
 .cell.quick-link > a {
   text-decoration : none ;
-  color : #fd9105 ;
+  color : #ffa500 ;
 } 
 
 #control-panel > .top-panel-controls { 
