--- a/app/assets/stylesheets/yardsticks.css.scss
+++ b/app/assets/stylesheets/yardsticks.css.scss
@@ -47,8 +47,8 @@ $light-gray: lighten($gray, 30%) ;
 
     li.ui-tabs-selected {
       background: transparent;
-      color: #fd9105 ;
-      border: 1px solid #fd9105 ;
+      color: #ffa500 ;
+      border: 1px solid #ffa500 ;
       margin-bottom: 5px ;
     }
 
