--- a/app/views/welcome/download.html.haml
+++ b/app/views/welcome/download.html.haml
@@ -4,7 +4,7 @@
 
 #scanbot-manual.left
   #download-btn
-    = link_to 'Download Scan Loader', '#'
+    = link_to 'Download Scan Application', '#'
   .half-column
     %h4= "What is this?"
     %p
